updated fixed navbar visibility on about events and events/details component and fixed margins

--- a/public/src/app/about/about.component.css
+++ b/public/src/app/about/about.component.css
@@ -2,6 +2,7 @@
 /* Intro  */
 /* ------------------------------------ */
 * {
+  margin: 0;
   box-sizing: border-box;
 }
 
@@ -29,6 +30,9 @@ img {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
   z-index: -1;
   margin: 0;
   font-family: 'Raleway', sans-serif;
