--- a/public/src/app/events/events.component.css
+++ b/public/src/app/events/events.component.css
@@ -3,6 +3,7 @@
 /* ------------------------------------- */
 
 * {
+    margin: 0;
     box-sizing: border-box;
     transition: all ease-in-out 250ms;
 }
@@ -17,6 +18,9 @@ img {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
   z-index: -1;
   margin: 0;
   font-family: 'Raleway', sans-serif;
